# python-setup-project

./: .pre-commit-config.yaml  Makefile  README.md  _logging.py  _setting.py  main.py  pyproject.toml  readme.md  requirements.txt
mutil_agents/: __init__.py  _setting.py
mutil_agents/agents/: __init__.py  event_agent.py  manager_agent.py  payment_support_agent.py
